--- a/app/src/main/res/layout/fragment_genarate_qr.xml
+++ b/app/src/main/res/layout/fragment_genarate_qr.xml
@@ -35,7 +35,7 @@
                 android:longClickable="false"
                 android:autofillHints="creditCardSecurityCode"
                 android:textColor="@color/white"
-                android:cursorVisible="true"
+                android:cursorVisible="false"
                 android:textColorHint="@color/white"
                 android:textCursorDrawable="@drawable/cursor_color_white"
                 android:textSize="@dimen/_53ssp" />
