--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -184,7 +184,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_regular"
+                                        android:fontFamily="@font/opensans_bold"
                                         android:text=" CYN"
                                         android:textColor="@color/primary_black"
                                         android:textSize="@dimen/_11ssp"
