--- a/app/src/main/res/layout/fragment_genarate_qr.xml
+++ b/app/src/main/res/layout/fragment_genarate_qr.xml
@@ -35,8 +35,8 @@
                 android:longClickable="false"
                 android:autofillHints="creditCardSecurityCode"
                 android:textColor="@color/white"
-                android:cursorVisible="false"
-                android:textColorHint="@color/white"
+                android:cursorVisible="true"
+                android:textColorHint="#FFFFFFD9"
                 android:textCursorDrawable="@drawable/cursor_color_white"
                 android:textSize="@dimen/_53ssp" />
 
