--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -2,8 +2,10 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/transactionDetailsLL"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="gone"
     android:background="@color/et_bg_gray"
     android:orientation="vertical">
 
