--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -5,9 +5,9 @@
     android:id="@+id/transactionDetailsLL"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
     android:background="@color/et_bg_gray"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,9 +19,9 @@
             android:id="@+id/ivBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_14sdp"
             android:layout_marginTop="@dimen/_40sdp"
             android:contentDescription="@string/back"
-            android:layout_marginStart="@dimen/_14sdp"
             android:padding="@dimen/_3sdp"
             android:src="@drawable/ic_back"
             app:tint="@color/primary_black" />
@@ -48,8 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_11sdp"
-            android:paddingVertical="@dimen/_16sdp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="@dimen/_16sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -272,13 +272,14 @@
                         android:id="@+id/ivRefund"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_4sdp"
-                        android:layout_gravity="center"
                         android:contentDescription="@string/refund"
                         android:src="@drawable/refund" />
 
                     <TextView
+                        android:id="@+id/RefundTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_2sdp"
@@ -301,42 +302,50 @@
                 android:paddingVertical="@dimen/_14sdp">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:fontFamily="@font/opensans_regular"
                     android:text="@string/reference_id"
+                    android:layout_weight="1"
                     android:textColor="@color/dark_gray"
                     android:textSize="@dimen/_11ssp" />
 
-                <TextView
-                    android:id="@+id/refID"
+                <LinearLayout
+                    android:id="@+id/saleRefIDcopyLL"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text=""
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/saleRefIDcopyIV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_6sdp"
-                    android:contentDescription="@string/copy"
-                    android:src="@drawable/ic_content_copy"
-                    app:tint="@color/primary_green" />
+                    <TextView
+                        android:id="@+id/refID"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text=""
+                        android:gravity="end"
+                        android:layout_weight="1"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp" />
 
+                    <ImageView
+                        android:id="@+id/saleRefIDcopyIV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/copy"
+                        android:layout_marginLeft="@dimen/_6sdp"
+                        android:src="@drawable/ic_content_copy"
+                        app:tint="@color/primary_green" />
+                </LinearLayout>
             </LinearLayout>
 
             <TextView
                 android:id="@+id/tvCustomerInfoHeading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_bold"
-                android:layout_marginStart="@dimen/_11sdp"
                 android:text="@string/customer_information"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
@@ -440,11 +449,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/ledger_information"
-                android:layout_marginStart="@dimen/_11sdp"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
@@ -552,10 +561,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_11sdp"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_bold"
-                    android:layout_marginStart="@dimen/_11sdp"
                     android:text="@string/original_transaction_details"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
@@ -594,41 +603,47 @@
                             android:textSize="@dimen/_11ssp" />
 
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_10sdp">
+                        android:paddingBottom="@dimen/_10sdp"
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/reference_id"
+                            android:layout_weight="1"
                             android:textColor="@color/dark_gray"
                             android:textSize="@dimen/_11ssp" />
 
-                        <TextView
-                            android:id="@+id/orgRefId"
+                        <LinearLayout
+                            android:id="@+id/orgRefIDcopyLL"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:text=""
-                            android:textColor="@color/primary_green"
-                            android:textSize="@dimen/_11ssp" />
+                            android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/orgRefIDcopyIV"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_6sdp"
-                            android:contentDescription="@string/copy"
-                            android:src="@drawable/ic_content_copy"
-                            app:tint="@color/primary_green" />
+                            <TextView
+                                android:id="@+id/orgRefId"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:text=""
+                                android:gravity="end"
+                                android:layout_weight="1"
+                                android:textColor="@color/primary_green"
+                                android:textSize="@dimen/_11ssp" />
 
+                            <ImageView
+                                android:id="@+id/orgRefIDcopyIV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:contentDescription="@string/copy"
+                                android:layout_marginLeft="@dimen/_6sdp"
+                                android:src="@drawable/ic_content_copy"
+                                app:tint="@color/primary_green" />
+                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -728,11 +743,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_11sdp"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/activity_log"
-                    android:layout_marginStart="@dimen/_11sdp"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
 
