--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <RelativeLayout
         android:layout_width="match_parent"
