--- a/app/src/main/res/layout/transaction_filter_dialog.xml
+++ b/app/src/main/res/layout/transaction_filter_dialog.xml
@@ -20,7 +20,6 @@
             android:layout_marginBottom="@dimen/_28sdp"
             android:background="@color/primary_green"
             android:gravity="center" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,10 +52,9 @@
 
             </RelativeLayout>
 
-            <ScrollView
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/applyFilterBtnCV"
                 android:layout_marginTop="@dimen/_25sdp"
                 android:scrollbars="none">
 
@@ -325,33 +323,33 @@
                             android:src="@drawable/ic_calendar_icon"
                             />
                     </LinearLayout>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/applyFilterBtnCV"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_42sdp"
+                        android:layout_marginTop="@dimen/_40sdp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="@dimen/_35sdp"
+                        android:gravity="center"
+                        app:cardBackgroundColor="#00a6a2"
+                        app:cardCornerRadius="@dimen/_20sdp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@color/primary_green"
+                            android:fontFamily="@font/opensans_bold"
+                            android:gravity="center"
+                            android:text="Apply Filter"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_12ssp" />
+                    </androidx.cardview.widget.CardView>
+
                 </LinearLayout>
 
-            </ScrollView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/applyFilterBtnCV"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_42sdp"
-                android:layout_marginTop="@dimen/_40sdp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="@dimen/_35sdp"
-                android:gravity="center"
-                app:cardBackgroundColor="#00a6a2"
-                app:cardCornerRadius="@dimen/_20sdp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/primary_green"
-                    android:fontFamily="@font/opensans_bold"
-                    android:gravity="center"
-                    android:text="Apply Filter"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
-
+            </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
 
