--- a/app/src/main/res/layout/activity_log_items.xml
+++ b/app/src/main/res/layout/activity_log_items.xml
@@ -17,16 +17,17 @@
             android:layout_height="@dimen/_4sdp"
             android:layout_marginTop="@dimen/_6sdp"
             android:background="@drawable/bg_greencolor_filled" />
-
         <TextView
             android:id="@+id/statusTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_68sdp"
+            android:layout_height="@dimen/_14sdp"
             android:layout_marginLeft="@dimen/_6sdp"
-            android:fontFamily="@font/opensans_semibold"
+            android:fontFamily="@font/opensans_bold"
             android:text="sucess"
+            android:background="@drawable/txn_completed_bg"
+            android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/_11ssp" />
+            android:textSize="@dimen/_7sdp" />
 
         <TextView
             android:id="@+id/date"
