--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -294,6 +294,7 @@
                         android:text="Load More"
                         android:textColor="@color/primary_green"
                         android:textSize="@dimen/_10ssp"
+                        android:visibility="gone"
                          />
 
                 </LinearLayout>
