--- a/app/src/main/res/layout/activity_genarate_qr.xml
+++ b/app/src/main/res/layout/activity_genarate_qr.xml
@@ -104,14 +104,12 @@
                                 app:layout_constraintTop_toTopOf="parent">
 
 
-                                <com.google.android.material.imageview.ShapeableImageView
+                                <com.coyni.pos.app.utils.CircleImageView
                                     android:id="@+id/ivUserProfile"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:scaleType="fitXY"
                                     android:src="@drawable/dba_img"
-                                    android:visibility="visible"
-                                    app:shapeAppearanceOverlay="@style/ImageViewRounded"/>
+                                    android:visibility="visible" />
 
                                 <TextView
                                     android:id="@+id/tvUserName"
