--- a/app/src/main/res/layout/fragment_dashboard_frag.xml
+++ b/app/src/main/res/layout/fragment_dashboard_frag.xml
@@ -58,7 +58,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_1sdp"
                             android:layout_marginTop="@dimen/_21sdp"
-                            android:background="@color/blue_light" />
+                            android:background="@color/button_bg" />
                     </LinearLayout>
 
                     <LinearLayout
