--- a/app/src/main/res/layout/generate_qr_keyboard.xml
+++ b/app/src/main/res/layout/generate_qr_keyboard.xml
@@ -223,8 +223,8 @@
                     android:gravity="center">
 
                     <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_outline_backspace" />
 
