--- a/app/src/main/res/layout/merchant_qr.xml
+++ b/app/src/main/res/layout/merchant_qr.xml
@@ -44,8 +44,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_11sdp"
-                        android:layout_marginBottom="@dimen/_11sdp"
                         android:gravity="center"
                         android:orientation="horizontal">
 
@@ -54,15 +52,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="160.00"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_33ssp" />
+                            android:text="hqqwjqkdwkd"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_28ssp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_5sdp"
-                            android:layout_marginTop="@dimen/_7sdp"
+                            android:layout_marginStart="@dimen/_3sdp"
+                            android:layout_marginTop="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_bold"
                             android:text="CYN"
                             android:textColor="@color/primary_black"
@@ -74,6 +72,7 @@
                         android:layout_width="@dimen/_160sdp"
                         android:layout_height="@dimen/_160sdp"
                         android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_16sdp"
                         android:layout_marginHorizontal="@dimen/_39sdp"
                         android:layout_marginBottom="@dimen/_34sdp"
                         android:background="@drawable/qr_image_outline">
