--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="vlight_grey">#E8E8E8</color>
     <color name="bg_color">#fafafa</color>
     <color name="light_blue">#d8e2f0</color>
+    <color name="light_blueee">#ebf0f7</color>
     <color name="true_green">#008a05</color>
     <color name="text_grey_msg">#C4C5C7</color>
     <color name="et_bg_gray">#f2f4f5</color>
