--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -211,7 +211,7 @@
                     android:id="@+id/backActionIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_outline_backspace"
+                    android:src="@drawable/delete"
                     android:textAlignment="center" />
             </LinearLayout>
 
