--- a/app/src/main/res/layout/custom_keyboard.xml
+++ b/app/src/main/res/layout/custom_keyboard.xml
@@ -71,7 +71,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/ic_outline_backspace" />
+                        android:src="@drawable/delete" />
 
                 </LinearLayout>
 
