--- a/app/src/main/res/layout/generate_qr_keyboard.xml
+++ b/app/src/main/res/layout/generate_qr_keyboard.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/top_corners"
     android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -10,9 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_2sdp"
         android:orientation="horizontal"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginHorizontal="@dimen/_8sdp"
         android:weightSum="3">
 
         <TextView
@@ -21,13 +20,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:fontFamily="@font/opensans_bold"
             android:background="@drawable/custom_keyboard_key_bg"
+            android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:text="1"
             android:padding="20dp"
+            android:text="1"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/primary_black"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold" />
 
@@ -37,12 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:fontFamily="@font/opensans_bold"
             android:background="@drawable/custom_keyboard_key_bg"
+            android:fontFamily="@font/opensans_bold"
             android:gravity="center"
             android:padding="20dp"
             android:text="2"
-            android:textColor="@color/black"
+            android:textColor="@color/primary_black"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold" />
 
@@ -52,12 +51,12 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:layout_weight="1"
-            android:fontFamily="@font/opensans_bold"
             android:background="@drawable/custom_keyboard_key_bg"
+            android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:text="3"
             android:padding="20dp"
-            android:textColor="@color/black"
+            android:text="3"
+            android:textColor="@color/primary_black"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold" />
 
@@ -66,7 +65,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_8sdp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -89,9 +87,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
-                    android:text="4"
                     android:padding="20dp"
-                    android:textColor="@color/black"
+                    android:text="4"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -103,9 +101,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
-                    android:text="5"
                     android:padding="20dp"
-                    android:textColor="@color/black"
+                    android:text="5"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -117,9 +115,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
-                    android:text="6"
                     android:padding="20dp"
-                    android:textColor="@color/black"
+                    android:text="6"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -142,7 +140,7 @@
                     android:gravity="center"
                     android:padding="20dp"
                     android:text="7"
-                    android:textColor="@color/black"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -154,9 +152,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
-                    android:text="8"
                     android:padding="20dp"
-                    android:textColor="@color/black"
+                    android:text="8"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -170,7 +168,7 @@
                     android:gravity="center"
                     android:padding="20dp"
                     android:text="9"
-                    android:textColor="@color/black"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -193,7 +191,7 @@
                     android:gravity="center"
                     android:padding="20dp"
                     android:text="0"
-                    android:textColor="@color/black"
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
@@ -205,29 +203,28 @@
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
-                    android:text="."
                     android:padding="20dp"
-                    android:textColor="@color/black"
+                    android:text="."
+                    android:textColor="@color/primary_black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
 
                 <LinearLayout
                     android:id="@+id/keyBackLL"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:padding="20dp"
-                    android:layout_gravity="center"
-                    android:background="@color/vlight_grey"
-                    android:gravity="center">
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:padding="20dp">
 
                     <ImageView
+                        android:id="@+id/backActionIV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_outline_backspace" />
-
+                        android:src="@drawable/delete"
+                        android:textAlignment="center" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -241,7 +238,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_44sdp"
         android:layout_marginHorizontal="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_21sdp"
         android:layout_marginBottom="@dimen/_20sdp"
         android:background="@drawable/cursor_color"
         app:cardBackgroundColor="@color/inactive_green"
