--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -102,11 +102,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_semibold"
+                    android:fontFamily="@font/opensans_regular"
                     android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_9ssp" />
+                    android:textSize="@dimen/_10ssp" />
 
                 <View
                     android:layout_width="match_parent"
@@ -140,7 +140,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:gravity="center"
                         android:textColor="@color/true_green"
-                        android:textSize="@dimen/_7sdp" />
+                        android:textSize="@dimen/_8sdp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -332,6 +332,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/copy"
+                        android:layout_marginTop="@dimen/_2sdp"
                         android:layout_marginLeft="@dimen/_6sdp"
                         android:src="@drawable/ic_content_copy"
                         app:tint="@color/primary_green" />
@@ -640,6 +641,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:contentDescription="@string/copy"
+                                android:layout_marginTop="@dimen/_2sdp"
                                 android:layout_marginLeft="@dimen/_6sdp"
                                 android:src="@drawable/ic_content_copy"
                                 app:tint="@color/primary_green" />
@@ -756,7 +758,6 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_corners"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/_9sdp"
                     android:paddingBottom="@dimen/_13sdp">
 
                     <androidx.recyclerview.widget.RecyclerView
