--- a/app/src/main/res/layout/fragment_dashboard_frag.xml
+++ b/app/src/main/res/layout/fragment_dashboard_frag.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:padding="@dimen/_10sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
@@ -30,7 +30,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#f9fbfd"
+                        android:background="@drawable/bg_gray_background"
                         android:orientation="vertical"
                         android:paddingTop="@dimen/_21sdp">
 
