--- a/app/src/main/res/layout/generate_qr_keyboard.xml
+++ b/app/src/main/res/layout/generate_qr_keyboard.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:contentDescription="keyOneTV"
             android:background="@drawable/custom_keyboard_key_bg"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
@@ -36,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:contentDescription="keyTwoTV"
             android:background="@drawable/custom_keyboard_key_bg"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
@@ -51,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:layout_weight="1"
+            android:contentDescription="keyThreeTV"
             android:background="@drawable/custom_keyboard_key_bg"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
@@ -85,6 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyFourTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -99,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyFiveTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -113,6 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keySixTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -136,6 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keySevenTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -150,6 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyEightTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -164,6 +172,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyNineTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -187,6 +196,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyZeroTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -201,6 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyDotTV"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:padding="20dp"
@@ -215,6 +226,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:contentDescription="keyBackLL"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:padding="20dp">
@@ -240,6 +252,7 @@
         android:layout_marginHorizontal="@dimen/_21sdp"
         android:layout_marginTop="@dimen/_21sdp"
         android:layout_marginBottom="@dimen/_20sdp"
+        android:contentDescription="keyActionCV"
         android:background="@drawable/cursor_color"
         app:cardBackgroundColor="@color/inactive_green"
         app:cardCornerRadius="@dimen/_22sdp">
