--- a/app/src/main/res/layout/activity_log_items.xml
+++ b/app/src/main/res/layout/activity_log_items.xml
@@ -49,6 +49,7 @@
         android:layout_marginLeft="@dimen/_11sdp"
         android:layout_marginRight="@dimen/_11sdp"
         android:layout_marginTop="@dimen/_3sdp"
+        android:contentDescription="messageTv"
         android:fontFamily="@font/opensans_regular"
         android:text=""
         android:textColor="@color/dark_gray"
