--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,6 +80,7 @@
                     android:inputType="number|textNoSuggestions"
                     android:maxLength="10"
                     android:maxLines="1"
+                    android:contentDescription="tidET"
                     android:paddingVertical="@dimen/_14sdp"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_14sdp"
@@ -169,6 +170,7 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:imeOptions="actionDone"
                     android:importantForAutofill="no"
+                    android:contentDescription="passwordET"
                     android:longClickable="false"
                     android:maxLength="32"
                     android:maxLines="1"
@@ -187,6 +189,7 @@
                 android:id="@+id/endIconIV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="endIconIV"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
                 android:layout_marginEnd="@dimen/_10sdp"
@@ -229,6 +232,7 @@
             android:layout_marginTop="@dimen/_27sdp"
             android:background="@drawable/button_bg_inactive"
             android:fontFamily="@font/opensans_bold"
+            android:contentDescription="tvButton"
             android:gravity="center"
             android:text="@string/log_in"
             android:textColor="@color/white"
