--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyOneTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -43,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyTwoTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -57,6 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyThreeTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -79,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyFourTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -93,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyFiveTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -107,6 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keySixTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -128,6 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keySevenTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -142,6 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyEightTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -156,6 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyNineTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -173,7 +182,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/qrNavigationTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -190,6 +198,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
+                android:contentDescription="keyZeroTV"
                 android:background="@drawable/custom_keyboard_key_bg"
                 android:fontFamily="@font/opensans_bold"
                 android:padding="20dp"
@@ -211,6 +220,7 @@
                     android:id="@+id/backActionIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="backActionIV"
                     android:src="@drawable/delete"
                     android:textAlignment="center" />
             </LinearLayout>
@@ -232,6 +242,7 @@
             android:layout_height="@dimen/_15sdp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="67dp"
+            android:contentDescription="imgBackk"
             android:src="@drawable/ic_white_close" />
 
         <TextView
