--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -15,6 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
+            android:contentDescription="checkCB"
             android:theme="@style/AppTheme"
             android:visibility="visible" />
 
