--- a/app/src/main/res/layout/recent_txns_list.xml
+++ b/app/src/main/res/layout/recent_txns_list.xml
@@ -3,6 +3,7 @@
     android:id="@+id/llClick"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:contentDescription="llClick"
     android:orientation="vertical">
 
     <View
